--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,17 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: 'Lato', sans-serif;
+}
+
+.name {
+	font-weight: bold;
+}
+
+.message {
+	font-weight: normal;
+}
+
+p {
+	margin: 0;
 }
