--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,10 +16,40 @@ body {
 	background-color: #f9f9f9;
 }
 
+.content .aux-panel {
+	display: none;
+}
+.content:hover .aux-panel {
+	display: block;
+}
+
 p {
 	margin: 0;
 }
 
 .hidden {
 	display: none;
+}
+
+.tall {
+	height: 90vh;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+.style-1::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: #f5f5f5;
+}
+
+.style-1::-webkit-scrollbar {
+	width: 12px;
+	background-color: #f5f5f5;
+}
+
+.style-1::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+	background-color: #555;
 }
