--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,9 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+/*----------------------------------*/
+/*-------------MESSAGES-------------*/
+/*----------------------------------*/
 .name {
 	font-weight: bold;
 }
@@ -30,10 +33,22 @@ p {
 .hidden {
 	display: none;
 }
+/*----------------------------------*/
+/*------------AUX PANEL-------------*/
+/*----------------------------------*/
+
+button {
+	margin: 0 5px;
+}
+
+/*----------------------------------*/
+/*--------MESSAGE CONTAINER---------*/
+/*----------------------------------*/
 
 .tall {
-	height: 90vh;
-	overflow-y: scroll;
+	height: 78vh;
+	/*max-height: 79vh;*/
+	/*overflow-y: scroll;*/
 	overflow-x: hidden;
 }
 
@@ -52,4 +67,41 @@ p {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 	background-color: #555;
+}
+
+/*----------------------------------*/
+/*-------------HEADER---------------*/
+/*----------------------------------*/
+
+h1 {
+	text-align: center;
+	color: #fff;
+	font-weight: 300;
+	letter-spacing: 1px;
+	word-spacing: 4px;
+	background: url(https://www.toptal.com/designers/subtlepatterns/patterns/ep_naturalblack.png);
+	padding: 30px;
+	margin: 15px 0 15px 0;
+	border-radius: 5px;
+	/*margin: 30px 0;*/
+	/*font-weight: 300;*/
+	/*letter-spacing: 1px;*/
+	/*word-spacing: 4px;*/
+}
+
+/*----------------------------------*/
+/*-------------GITHUB---------------*/
+/*----------------------------------*/
+
+.footer {
+	text-align: center;
+}
+
+.footer i {
+	margin: 7px 0 10px 0;
+	font-size: 250%;
+}
+
+.footer a {
+	color: #333;
 }
