--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,6 +52,29 @@ button {
 	overflow-x: hidden;
 }
 
+@media only screen and (max-width: 768px) {
+	.tall {
+		height: 74vh;
+	}
+}
+
+@media only screen and (max-width: 562px) {
+	.tall {
+		height: 70vh;
+	}
+}
+
+@media only screen and (max-width: 332px) {
+	.tall {
+		height: 66vh;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.username-input {
+		margin-bottom: 10px;
+	}
+}
 .style-1::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
