--- a/client/src/index.css
+++ b/client/src/index.css
@@ -142,3 +142,11 @@ h1 {
 .footer a {
 	color: #333;
 }
+
+/*----------------------------------*/
+/*------------USER PANEL------------*/
+/*----------------------------------*/
+
+.list-group-item {
+	margin-bottom: .01%;
+}
